--- a/README
+++ b/README
@@ -2,24 +2,23 @@ FSSFive WordPress Theme Read Me...
 
 Summary
 
-FSSFive is a clean and clear WordPress blogging theme employing a component of The Fluid Project's; http://fluidproject.org/, Infusion framework, the Fluid Skinning System (FSS).
+FSSFive is a clean and simple WordPress blogging theme employing a component of The Fluid Project's; http://fluidproject.org/, Infusion framework, the Fluid Skinning System (FSS).
 
-FSSFive is, at it's core, an HTML5-based, accessibility driven WordPress theme. Not by any stretch of your imagination is it finished — meaning there are more neat and exciting things yet to come. But, like most of everything on the web, it’s a work in progress.
+FSSFive is, at it's core, an HTML5-based, accessibility driven WordPress theme. Not by any stretch of your imagination is it finished -- meaning there are more neat and exciting things yet to come. But, like most of everything on the web, it’s a work in progress.
 
 FSSFive employs a lot of the standard WordPress elements, id's and classes, it also has the publishing requirements that adhere to the hNews Microformat.
 
 FSSFive's Strength's
 
-1. As stated above, HTML5 and hNews compatible.
-2. uiOptions; http://wiki.fluidproject.org/display/fluid/UI+Options+API, compatible. And coming soon.
-3. Still very much under development. Please direct any concerns, suggestions and issues you may be experiencing to FSSFive developer; http://abledaccess.com/contact/. Thanks.
+1. As stated above, HTML5 and hNews Microformat compatible.
+2. FSSFive is aligned to the vertical 12 column 960 grid system; http://960.gs. 
+3. Comments are functioning better, are threaded. Though it is recommended you only allow comments to be threaded 5 levels deep. 
+4. uiOptions; http://wiki.fluidproject.org/display/fluid/UI+Options+API, compatible. And coming soon.
+5. Still very much under development. Please direct any concerns, suggestions and issues you may be experiencing to FSSFive developer; http://abledaccess.com/contact/. Thanks.
 
 FSSFive's Weakness' (which will continue to be addressed and improved)
 
 1. Keyboard navigation hasn't been fully implemented.
 2. No current page indication in the main navigation menu.
 3. Lots of unwanted and unneeded id's and class' throughout the mark-up WordPress generates -- in the main navigation menu especially.
-4. Backwards compatibility? While Infusion boasts support for legacy browsers, IE6 included, and, as of version 3.2, WordPress has dropped support for said browser, FSSFive makes no such guarantees support is provided. FSSFive was developed and has been testing both on recent releases of WordPress -- no earlier than 3.1 -- and with an array of modern browsers. More testing is currently pending.
-5. The comments need a ton of work -- both in terms of structure and presentation.
-6. No threaded comments.
-
+4. Backwards compatibility? While Infusion (FSSs parent framework) boasts support for legacy browsers, IE6 included, and, as of version 3.2, WordPress has dropped support for said browser, FSSFive makes no such guarantees support is provided. FSSFive was developed and has been testing both on recent releases of WordPress -- no earlier than 3.1 -- and with an array of modern browsers. Or in other words the CSS3 box-sizing property is used which will cause positioning inconsistencies in browsers that don't recognize CSS3. But more testing is currently pending.
